--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ service_worker: true
 markdown: kramdown
 highlighter: rouge # or pygments or null
 # theme: jekyll-sleek # Uncomment if you're using the theme as a ruby gem
+theme: jekyll-sleek
+
 exclude:
   - README.md
   - node_modules
