--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
-author: GitHub User # You :P
+title: π # your site title
+author: voltelxu # You :P
 description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    blogs
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://voltelxu.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
-  name: Your Name
+  name: voltelxu
   links:
-    - https://github.com/benbalter
+    - https://github.com/voltelxu
 
 # THEME SETTINGS
 navigation: # Navigation links
